--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.11",
     "gatsby-remark-emoji": "0.0.2",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.0.10",
     "gatsby-remark-images-medium-zoom": "^1.7.0",
     "gatsby-remark-katex": "^3.1.25",
