--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@styles/*": [
+        "styled-system/*"
       ]
     },
     "lib": [
