Configure a path alias to src/components directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
       "@/*": [
         "src/*"
       ],
+      "@components/*": [
+        "src/components/*"
+      ],
       "@styles/*": [
         "styled-system/*"
       ]
