--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "prepare": "panda codegen"
   },
   "dependencies": {
+    "@mdx-js/loader": "3.0.0",
+    "@mdx-js/react": "3.0.0",
+    "@next/mdx": "14.0.4",
+    "@types/mdx": "2.0.10",
     "next": "14.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remark-gfm": "4.0.0"
   },
   "devDependencies": {
     "@pandacss/dev": "0.21.0",
