--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@mdx-js/react": "3.0.0",
     "@next/mdx": "14.0.4",
     "@types/mdx": "2.0.10",
+    "gray-matter": "4.0.3",
     "next": "14.0.4",
+    "next-mdx-remote": "4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remark-gfm": "4.0.0"
+    "rehype-autolink-headings": "7.1.0",
+    "rehype-slug": "6.0.0",
+    "remark-gfm": "3.0.1",
+    "server-only": "0.0.1"
   },
   "devDependencies": {
     "@pandacss/dev": "0.21.0",
