--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/icons/caret-right.tsx"  ],
   "exclude": [
     "node_modules"
   ]
