--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/react": "3.0.0",
     "@next/mdx": "14.0.4",
     "@types/mdx": "2.0.10",
+    "date-fns": "2.30.0",
     "gray-matter": "4.0.3",
     "next": "14.0.4",
     "next-mdx-remote": "4.4.1",
